# Auto-Tool-test

./: configure.ac
include/: liba.h  libb.h
libs/: Makefile.am  liba.c  libb.c
src/: Makefile.am  gg.c
